--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                         </div>
 			<div class="col-md-4">
                             <div class="title">
-                                <h1>HABNet: Machine Learning, Remote Sensing Based Detection of Harmful Algal Blooms</h1>
+                             <p><a href="poster.pdf"><img src="Paul_Hill_v2.jpg" width="100%" height="20%" class="center" /></a></p>
                             </div>
                         </div>
 			<div class="col-md-4">
