--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>HABNet</title>
+    <title>Dr Paul Hill</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css">
+    <link rel="stylesheet" href="https://cdn.rawgit.com/jpswalsh/academicons/master/css/academicons.min.css">
 </head>
 
 <body id="page-top">
@@ -15,73 +17,127 @@
             <div class="container">
                 <div class="row">
                     <div class="row vertical-align">
-  
-                        <div class="col-md-4">
+                        <div class="col-md-3">
                             <div class="title">
-                                <h1>Dr Paul Hill</h1>
+                                <p><img src="Paul_Hill_v2.jpg" width="100%" height="20%" class="center" /></p>
                             </div>
                         </div>
-			<div class="col-md-4">
+                        <div class="col-md-3">
                             <div class="title">
-                             <p><a href="poster.pdf"><img src="Paul_Hill_v2.jpg" width="100%" height="20%" class="center" /></a></p>
+                                <h1>Dr Paul Hill</h1> Senior Research Fellow in Image Communication <ul class="list-inline list-social-icons mb-0">
+                                    <li class="list-inline-item">
+                                        <a href="https://scholar.google.com/citations?user=luxEujEAAAAJ&hl=en">
+                                            <span class="fa-stack fa-lg">
+                                                <i class="ai ai-google-scholar-square ai-2x"></i>
+                                            </span>
+                                        </a>
+                                    </li>
+                                    <li class="list-inline-item">
+                                        <a href="https://www.linkedin.com/in/paul-hill-28a844148/">
+                                            <span class="fa-stack fa-lg">
+                                                <i class="fa fa-square fa-stack-2x"></i>
+                                                <i class="fab fa-linkedin fa-stack-1x fa-inverse"></i>
+                                            </span>
+                                        </a>
+                                    </li>
+                                    <li class="list-inline-item">
+                                        <a href="PRH_CV_2020.pdf">
+                                            <span class="fa-stack fa-lg">
+                                                <i class="ai ai-cv-square ai-2x"></i>
+                                            </span>
+                                        </a>
+                                    </li>
+                                </ul>
                             </div>
                         </div>
-			<div class="col-md-4">
-			    <p><a href='https://vilab.blogs.bristol.ac.uk'><img src="VILogo.jpg" width="100%" height="20%" alt=""></a></p>
-			    <p><a href='https://www.bristol.ac.uk/vision-institute'><img src="bvilogo.gif" width="100%" height="20%" alt=""></a></p>
-			    <p><a href='https://www.bristol.ac.uk'><img src="uob-logo.svg" width="100%" height="20%" alt=""></a></p>
+                        <div class="col-md-3">
+                            <div class='title'>
+                                <p>1.23, 1 Cathedral Square</p>
+                                <p>University of Bristol</p>
+                                <p>Bristol BS1 5DD</p>
+                                <p>United Kingdom</p>
+                                <pre>csprh*at*bris.ac.uk</pre>
+                            </div>
+                        </div>
+                        <div class="col-md-3">
+                            <p><a href='https://vilab.blogs.bristol.ac.uk'><img src="VILogo.jpg" width="100%" height="20%" alt=""></a></p>
+                            <p><a href='https://www.bristol.ac.uk/vision-institute'><img src="bvilogo.gif" width="100%" height="20%" alt=""></a></p>
+                            <p><a href='https://www.bristol.ac.uk'><img src="uob-logo.svg" width="100%" height="20%" alt=""></a></p>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="container-md">
-                <h2>About</h2>
-                <p>This project is concerned with the application of machine learning techniques to develop a state-of-the-art detection and prediction system for spatiotemporal events found within remote sensing data; specifically, Harmful Algal Bloom events (HABs). </p>
-		<dl>
-			<dt>Funders</dt>
-			<dd>British Council for funding: British Council Award ref 279334808</dd>
-			<dt>Collaborators</dt>
-			<dd>Kustar/ MASDAR, UAE; FWC, Florida; EAD, UAE</dd>
-		</dl>
+                <h2>About</h2> I am a Senior Research Fellow at the University of Bristol researching into many different fields related to signal and image processing. I am also a lecturer delivering the whole of the masters course <a href="https://www.bris.ac.uk/unit-programme-catalogue/UnitDetails.jsa?ayrCode=19%2F20&unitCode=EENGM1411">Speech and Audio Processing</a>. I'm also a member of the Visual Information Laboratory, which is led by Prof. David Bull, within the Department of Electrical and Electronic Engineering, University of Bristol.
+            </div>
+            <hr />
+            <div class="container">
+                <div class="row">
+                    <div class="row vertical-align">
+                        <div class="col-md-6">
+                            <div class="container-md">
+                                <h2>Research Interests</h2>
+                                <ul>
+                                    <li>Compression</li>
+                                    <li>Image Fusion</li>
+                                    <li>Machine Learning</li>
+                                    <li>Audio Processing</li>
+                                    <li>Remote Sensing</li>
+                                    <li>Signal Processing</li>
+                                    <li>Perceptual Processing</li>
+                                    <li>2D Transforms</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="container-md">
+                                <h2>Book</h2>
+                                <p><a href='https://www.amazon.co.uk/Audio-Speech-Processing-MATLAB-Paul/dp/1498762743/'><img src="book.jpg" width="45%" height="45%" alt=""></a></p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
             <hr />
             <div class="container-md">
-                <h2>Abstract</h2>
-                <p> This paper describes the application of machine learning techniques to develop a state-of-the-art detection and prediction system for spatiotemporal events found within remote sensing data; specifically, Harmful Algal Bloom events (HABs). We propose an HAB detection system based on: a ground truth historical record of HAB events, a novel spatiotemporal datacube representation of each event (from MODIS and GEBCO bathymetry data) and a variety of machine learning architectures utilising state-of-the-art spatial and temporal analysis methods based on Convolutional Neural Networks (CNNs), Long Short-Term Memory (LSTM) components together with Random Forest and Support VectorMachine (SVM) classification methods. This work has focused specifically on the case study of the detection of Karenia Brevis Algae (K. brevis) HAB events within the coastal waters of Florida (over 2850 events from 2003 to 2018; an order of magnitude larger than any previousmachine learning detection study into HAB events). The development of multimodal spatiotemporal datacube data structures and associated novel machine learning methods give a unique architecture for the automatic detection of environmental events. Specifically, when applied to the detection of HAB events it gives a maximum detection accuracy of 91%and a Kappa coefficient of 0.81 for the Florida data considered. A HAB forecast system was also developed where a temporal subset of each datacube was used to predict the presence of a HAB in the future. This system was not significantly less accurate than the detection system being able to predict with 86% accuracy up to 8 days in the future. </p>
-            </div>
-            <hr />
-            <div class="container-md">
-                <h2 id="poster">Poster</h2>
-                <p><a href="poster.pdf"><img src="poster.png" alt="Poster" width=300 class="center" /></a></p>
-            </div>
-            <hr />
-            <div class="container-md">
-                <h2 id="downloads">Downloads</h2>
+                <h2 id="projects">News & Activities</h2>
                 <ul>
-                    <li>Paper <a href="https://ieeexplore.ieee.org/abstract/document/9113293">[PDF]</a> <a href="https://arxiv.org/abs/1912.02305">[ArXiv]</a></li>
-                    <li>Supplementary <a href="poster.pdf">[Poster]</a></li>
+                    <li>Jul- 2020: Research Audience Immersion on Local Creative Cluster: CIC</li>
+                    <li>Mar 2020: Supervision of Lines and Waves / Comms Labs</li>
+                    <li>Feb-Apr 2020: Lecturing on Optimal Signal Processing</li>
+                    <li>Jan- 2020: Local organising committee <a href="https://pcs2021.org/">PCS 2021</a></li>
                 </ul>
             </div>
+            <hr />
             <div class="container-md">
-                <h2>Code (on Github)</h2>
-                <ul>
-                    <li><a href='https://github.com/csprh/extractData'>Matlab Based Code for DataCube Extraction</a> </li>
-                    <li><a href='https://github.com/csprh/modelHAB'>Python code for HAB classification</a> </li>
-                </ul>
-            </div>
-            <div class="container-md">
-                <h2>Citation</h2>
-                <pre class="citation">
-@article{hill2020habnet,
-  title={HABNet: Machine Learning, Remote Sensing-Based Detection of Harmful Algal Blooms},
-  author={Hill, Paul R and Kumar, Anurag and Temimi, Marouane and Bull, David R},
-  journal={IEEE Journal of Selected Topics in Applied Earth Observations and Remote Sensing},
-  volume={13},
-  pages={3229--3239},
-  year={2020},
-  publisher={IEEE}}</pre>
+                <h2 id="projects">Projects</h2>
+
+
+            <div class="researchlist">
+                <a href="https://csprh.github.io/HABNET/">HABNet: Machine Learning, Remote Sensing Based Detection of Harmful Algal Blooms</a>
+                    <p>This project is concerned with the application of machine learning techniques to develop a state-of-the-art detection and prediction system for spatiotemporal events found within remote sensing data; specifically, Harmful Algal Bloom events (HABs).</p>
+                    <div class="line_sep"></div>
+                <a href="https://seis.bristol.ac.uk/~eexna/research/volcanicUnrest.html">Automated Alert System for Volcanic Unrest</a>
+                    <p>Satellite radar (InSAR) can be employed to observe volcanic ground deformation, which has shown a significant statistical link to eruptions. The explosion in data has however brought major challenges associated with timely dissemination of information and distinguishing volcano deformation patterns from noise, which currently relies on manual inspection. Here, we present a novel approach to detect volcanic ground deformation automatically from InSAR images.</p>
+                    <div class="line_sep"></div>
+
             </div>
 
+
+
+                <h3></h3>
+            </div>
+            <hr />
+            <div class="container-md">
+                <h2 id="projects">Papers</h2>
+                For all my papers see both google scholar 
+		<ul>
+		    <li><a href="https://scholar.google.com/citations?user=luxEujEAAAAJ&hl=en">Google Scholar</a></li>
+                    <li><a href="https://research-information.bris.ac.uk/en/persons/paul-r-hill">research-information.bris.ac.uk</a></li>
+                </ul>
+		
+            </div>
+            <hr />
         </div>
     </div>
 </body>
