--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                             </div>
                         </div>
                         <div class="col-md-3">
-                            <p><a href='https://vilab.blogs.bristol.ac.uk'><img src="VILogo.svg" width="100%" height="20%" alt=""></a></p>
+                            <p><a href='https://vilab.blogs.bristol.ac.uk'><img src="VIL_logo.svg" width="100%" height="20%" alt=""></a></p>
                             <p><a href='https://www.bristol.ac.uk/vision-institute'><img src="bvilogo.svg" width="100%" height="20%" alt=""></a></p>
                             <p><a href='https://www.bristol.ac.uk'><img src="uob-logo.svg" width="100%" height="20%" alt=""></a></p>
                         </div>
