--- a/index.html
+++ b/index.html
@@ -28,22 +28,22 @@
 			       <ul class="list-inline list-social-icons mb-0">
                                     <li class="list-inline-item">
                                         <a href="https://scholar.google.com/citations?user=luxEujEAAAAJ&hl=en">
-                                            <span class="fa-2x">
+                                            <span class="fa-3x">
                                                 <i class="ai ai-google-scholar-square"></i>
                                             </span>
                                         </a>
                                     </li>
                                     <li class="list-inline-item">
                                         <a href="https://www.linkedin.com/in/paul-hill-28a844148/">
-                                            <span class="fa-2x">
+                                            <span class="fa-3x">
                                                 <i class="fab fa-linkedin"></i>
                                             </span>
                                         </a>
                                     </li>
                                     <li class="list-inline-item">
                                         <a href="PRH_CV_2020.pdf">
-                                            <span class="fa-2x">
-                                                <i class="ai ai-cv-square fasmaller"></i>
+                                            <span class="fa-3x">
+                                                <i class="ai ai-cv-square"></i>
                                             </span>
                                         </a>
                                     </li>
