--- a/index.html
+++ b/index.html
@@ -22,9 +22,12 @@
                                 <p><img src="Paul_Hill_v2.jpg" width="100%" height="20%" class="center" /></p>
                             </div>
                         </div>
-                        <div class="col-md-3">
+                        <div class="col-md-6">
                             <div class="title">
 				    <h1>Dr Paul Hill</h1>Senior Research Fellow in Image Communication
+				<p>1.23, 1 Cathedral Square, University of Bristol</p>
+                                <p>Bristol BS1 5DD, UK</p>
+                                <pre>csprh*at*bris.ac.uk</pre>
 			       <ul class="list-inline list-social-icons mb-0">
                                     <li class="list-inline-item">
                                         <a href="https://scholar.google.com/citations?user=luxEujEAAAAJ&hl=en">
@@ -41,6 +44,13 @@
                                         </a>
                                     </li>
                                     <li class="list-inline-item">
+                                        <a href="https://www.github.com/csprh">
+                                            <span class="fa-3x">
+                                                <i class="fab fa-github"></i>
+                                            </span>
+                                        </a>
+                                    </li>
+				    <li class="list-inline-item">
                                         <a href="PRH_CV_2020.pdf">
                                             <span class="fa-3x">
                                                 <i class="ai ai-cv-square"></i>
@@ -50,15 +60,10 @@
 			       </ul>
                             </div>
                         </div>
-                        <div class="col-md-3">
-                            <div class='title'>
-                                <p>1.23, 1 Cathedral Square</p>
-                                <p>University of Bristol</p>
-                                <p>Bristol BS1 5DD</p>
-                                <p>United Kingdom</p>
-                                <pre>csprh*at*bris.ac.uk</pre>
-                            </div>
-                        </div>
+
+
+
+
                         <div class="col-md-3">
                             <p><a href='https://www.bristol.ac.uk'><img src="uob-logo.svg" width="100%" height="20%" alt=""></a></p>
                             <p><a href='https://www.bristol.ac.uk/vision-institute'><img src="bvilogo.svg" width="100%" height="20%" alt=""></a></p>
