--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                         </div>
                         <div class="col-md-6">
                             <div class="title">
-				    <h1>Dr Paul Hill</h1>Senior Research Fellow in Image Communication
+				    <h1>Dr Paul Hill</h1><h5>Lecturer, Senior Research Fellow</h5>
 				<p>1.23, 1 Cathedral Square, University of Bristol</p>
                                 <p>Bristol BS1 5DD, UK</p>
                                 <pre>csprh*at*bris.ac.uk</pre>
