--- a/index.html
+++ b/index.html
@@ -2,8 +2,12 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <title>Dr Paul Hill</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    
+    <title>Your Name</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
     <link rel="stylesheet" href="./css/style.css">
@@ -37,10 +41,10 @@
                         </div>
                         <div class="col-md-6">
                             <div class="title">
-			        <h1>Dr Paul Hill</h1><h5>Lecturer, Senior Research Fellow</h5>
+			        <h1>Your Name</h1><h5>Roll Description</h5>
 				<p>1.23, 1 Cathedral Square, University of Bristol</p>
                                 <p>Bristol BS1 5DD, UK</p>
-                                <pre>csprh*at*bris.ac.uk</pre>
+                                <pre>username*at*bris.ac.uk</pre>
 			        <ul class="list-inline list-social-icons mb-0">
                                     <li class="list-inline-item">
                                         <a href="https://scholar.google.com/citations?user=luxEujEAAAAJ&hl=en">
@@ -73,8 +77,6 @@
 			       </ul>
                             </div>
                         </div>
-
-
 
 
                         <div class="col-md-3">
@@ -140,6 +142,10 @@
                 <a href="https://seis.bristol.ac.uk/~eexna/research/volcanicUnrest.html">Automated Alert System for Volcanic Unrest</a>
                     <p>Satellite radar (InSAR) can be employed to observe volcanic ground deformation, which has shown a significant statistical link to eruptions. The explosion in data has however brought major challenges associated with timely dissemination of information and distinguishing volcano deformation patterns from noise, which currently relies on manual inspection. Here, we present a novel approach to detect volcanic ground deformation automatically from InSAR images.</p>
                     <div class="line_sep"></div>
+                <a href="https://csprh.github.io/Image-Fusion/">Perceptual Image Fusion</a>
+                    <p>The effective fusion of two or more visual sources can provide significant benefits for visualisation, scene understanding, target recognition and situational awareness in multi-sensor applications such as medicine, surveillance and remote sensing. Our work has focused on the use of image fusion within the wavelet domain leading to perceptually and region based fusion methods.</p>
+                    <div class="line_sep"></div>
+		    https://csprh.github.io/Image-Fusion/
 
             </div>
 
