--- a/index.html
+++ b/index.html
@@ -143,9 +143,12 @@
                 <a href="https://csprh.github.io/Image-Fusion/">Perceptual Image Fusion</a>
                     <p>The effective fusion of two or more visual sources can provide significant benefits for visualisation, scene understanding, target recognition and situational awareness in multi-sensor applications such as medicine, surveillance and remote sensing. Our work has focused on the use of image fusion within the wavelet domain leading to perceptually and region based fusion methods.</p>
                     <div class="line_sep"></div>
-
+                <a href="https://csprh.github.io/CONTRAST_Sens/">Wavelet Contrast Sensitivity</a>
+                    <p>This project developed specific conventional contrast sensitivity functions (CSFs) for a variety of wavelet transforms (Conventional Wavelet, Dual Tree Complex Wavelet, Curvelet, and Steerable Pyramid Transforms).  These functions have been subsequently used in our Perceptual Fusion work (linked above)</p>
+                    <div class="line_sep"></div>
             </div>
 
+	    
 
 
                 <h3></h3>
