--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
             </div>
             <hr />
             <div class="container-md">
-                <h2 id="projects">Projects</h2>
+                <h2 id="projects">Recent Projects</h2>
 
 
             <div class="researchlist">
