--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
                         </div>
                         <div class="col-md-6">
                             <div class="title">
-			        <h1>Dr Paul Hill</h1><h5>Lecturer, Senior Research Fellow</h5>
-				<p>1.23, 1 Cathedral Square, University of Bristol</p>
-                                <p>Bristol BS1 5DD, UK</p>
-                                <pre>csprh*at*bris.ac.uk</pre>
+			        <h1>Dr Paul Hill</h1><h5>Machine Learning Professional</h5>
+				<p>SeeByte: https://www.seebyte.com/</p>
+                                <p></p>
+                                <pre></pre>
 			        <ul class="list-inline list-social-icons mb-0">
                                     <li class="list-inline-item">
                                         <a href="https://scholar.google.com/citations?user=luxEujEAAAAJ&hl=en">
