--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                         </div>
                         <div class="col-md-6">
                             <div class="title">
-			        <h1>Dr Paul Hill</h1><h5>Machine Learning Professional</h5>
+			        <h1>Dr Paul Hill</h1><h5>Machine Learning Lead Engineer</h5>
 				<p>SeeByte: https://www.seebyte.com/</p>
                                 <p></p>
                                 <pre></pre>
