--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                                         </a>
                                     </li>
 				    <li class="list-inline-item">
-                                        <a href="PRH_CV_2020.pdf">
+                                        <a href="HILLCV2022v2.pdf">
                                             <span class="fa-3x">
                                                 <i class="ai ai-cv-square"></i>
                                             </span>
@@ -86,7 +86,7 @@
                 </div>
             </div>
             <div class="container-md">
-                <h2>About</h2> I am a Senior Research Fellow at the University of Bristol researching into many different fields related to signal and image processing. I am also a lecturer delivering the whole of the masters course <a href="https://www.bris.ac.uk/unit-programme-catalogue/UnitDetails.jsa?ayrCode=19%2F20&unitCode=EENGM1411">Speech and Audio Processing</a>.  I'm also a member of the <a href="https://vilab.blogs.bristol.ac.uk" target="_blank">Visual Information Laboratory</a> and the <a href="https://www.bristol.ac.uk/vision-institute">Bristol Vision Institute</a>, which are led by <a href="http://www.bristol.ac.uk/engineering/people/david-r-bull/index.html">Prof. David Bull</a> within the Department of Electrical and Electronic Engineering, University of Bristol.
+                <h2>About</h2> I am a Machine Learning Professional working for SeeByte (www.seebyte.com).  Also I was previously a Senior Research Fellow at the University of Bristol researching into many different fields related to signal and image processing. I am also a lecturer delivering the whole of the masters course <a href="https://www.bris.ac.uk/unit-programme-catalogue/UnitDetails.jsa?ayrCode=19%2F20&unitCode=EENGM1411">Speech and Audio Processing</a>.  I'm also a member of the <a href="https://vilab.blogs.bristol.ac.uk" target="_blank">Visual Information Laboratory</a> and the <a href="https://www.bristol.ac.uk/vision-institute">Bristol Vision Institute</a>, which are led by <a href="http://www.bristol.ac.uk/engineering/people/david-r-bull/index.html">Prof. David Bull</a> within the Department of Electrical and Electronic Engineering, University of Bristol.
             </div>
             <hr />
             <div class="container">
