--- a/index.html
+++ b/index.html
@@ -38,7 +38,6 @@
                         <div class="col-md-6">
                             <div class="title">
 			        <h1>Dr Paul Hill</h1><h5>Machine Learning Lead Engineer</h5>
-				<p>SeeByte: https://www.seebyte.com/</p>
                                 <p></p>
                                 <pre></pre>
 			        <ul class="list-inline list-social-icons mb-0">
@@ -86,7 +85,7 @@
                 </div>
             </div>
             <div class="container-md">
-                <h2>About</h2> I am a Machine Learning Professional working for SeeByte (www.seebyte.com).  Also I was previously a Senior Research Fellow at the University of Bristol researching into many different fields related to signal and image processing. I am also a lecturer delivering the whole of the masters course <a href="https://www.bris.ac.uk/unit-programme-catalogue/UnitDetails.jsa?ayrCode=19%2F20&unitCode=EENGM1411">Speech and Audio Processing</a>.  I'm also a member of the <a href="https://vilab.blogs.bristol.ac.uk" target="_blank">Visual Information Laboratory</a> and the <a href="https://www.bristol.ac.uk/vision-institute">Bristol Vision Institute</a>, which are led by <a href="http://www.bristol.ac.uk/engineering/people/david-r-bull/index.html">Prof. David Bull</a> within the Department of Electrical and Electronic Engineering, University of Bristol.
+                <h2>About</h2> I am a Machine Learning Professional currently working as Senior Research Fellow at the University of Bristol.  Also, I was previously at the University of Bristol (before a couple years in industry) researching into many different fields related to signal and image processing. I am also a lecturer delivering the whole of the masters course <a href="https://www.bris.ac.uk/unit-programme-catalogue/UnitDetails.jsa?ayrCode=19%2F20&unitCode=EENGM1411">Speech and Audio Processing</a>.  I'm also a member of the <a href="https://vilab.blogs.bristol.ac.uk" target="_blank">Visual Information Laboratory</a> and the <a href="https://www.bristol.ac.uk/vision-institute">Bristol Vision Institute</a>, which are led by <a href="http://www.bristol.ac.uk/engineering/people/david-r-bull/index.html">Prof. David Bull</a> within the Department of Electrical and Electronic Engineering, University of Bristol.
             </div>
             <hr />
             <div class="container">
