--- a/index.html
+++ b/index.html
@@ -134,7 +134,10 @@
 
             <div class="researchlist">
                 <a href="https://csprh.github.io/HABNET/">HABNet: Machine Learning, Remote Sensing Based Detection of Harmful Algal Blooms</a>
-                    <p>This project is concerned with the application of machine learning techniques to develop a state-of-the-art detection and prediction system for spatiotemporal events found within remote sensing data; specifically, Harmful Algal Bloom events (HABs).</p>
+                    <p>This project is concerned with the application of machine learning techniques to develop a state-of-the-art detection and prediction system for spatiotemporal events found within remote sensing data; specifically, Harmful Algal Bloom events (HABs). 
+		    <a href="https://github.com/csprh/HABNetDatacubeExtraction">https://github.com/csprh/HABNetDatacubeExtraction</a>
+		    <a href="https://github.com/csprh/HABNetModelling/">https://github.com/csprh/HABNetModelling</a>
+		    </p>
                     <div class="line_sep"></div>
                 <a href="https://seis.bristol.ac.uk/~eexna/research/volcanicUnrest.html">Automated Alert System for Volcanic Unrest</a>
                     <p>Satellite radar (InSAR) can be employed to observe volcanic ground deformation, which has shown a significant statistical link to eruptions. The explosion in data has however brought major challenges associated with timely dissemination of information and distinguishing volcano deformation patterns from noise, which currently relies on manual inspection. Here, we present a novel approach to detect volcanic ground deformation automatically from InSAR images.</p>
