--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                                         </a>
                                     </li>
 				    <li class="list-inline-item">
-                                        <a href="HILLCV2024v1.pdf">
+                                        <a href="HILLCV2025v1.0pdf">
                                             <span class="fa-3x">
                                                 <i class="ai ai-cv-square"></i>
                                             </span>
